# jb_transpiler

./: .gitignore  CMakeLists.txt  README.md  build.sh  output  output.c  run_cram_tests.py  run_tests.sh  test.c  test_program
grammar/: JBLang.g4
include/jblang/ast/: TranspilerVisitor.h
include/jblang/codegen/: CCodeGenerator.h  CodeGenerator.h
include/jblang/core/: CompilerError.h
include/jblang/runtime/: allocator_interface.h  mark_sweep_allocator.h  reference_count_allocator.h  runtime.h  simple_allocator.h
include/jblang/types/: SymbolTable.h  TypeSystem.h
runtime/: CMakeLists.txt  Makefile
runtime/include/: allocator_interface.h  mark_sweep_allocator.h  reference_count_allocator.h  runtime.h  simple_allocator.h
runtime/src/: allocator_impl.c  mark_sweep_allocator.c  reference_count_allocator.c  runtime.c  simple_allocator.c
src/: CCodeGenerator.cpp  CCodeGenerator.h  CodeGenerator.h  CompilerError.cpp  CompilerError.h  JBLang.g4  JBLang_g4.txt  SymbolTable.h  TranspilerVisitor.cpp  TranspilerVisitor.h  TypeSystem.cpp  TypeSystem.h  main.cpp
src/ast/: TranspilerVisitor.cpp
src/codegen/: CCodeGenerator.cpp
src/core/: CompilerError.cpp
src/runtime/: CMakeLists.txt  allocator_impl.c  allocator_interface.h  mark_sweep_allocator.c  mark_sweep_allocator.h  reference_count_allocator.c  reference_count_allocator.h  runtime.c  runtime.h  simple_allocator.c  simple_allocator.h
src/types/: SymbolTable.cpp  TypeSystem.cpp
test/: test.jb  test_struct_controlFlow_ptr.jb  test_variables_functions.jb
tests/: test_core.cpp
tests/examples/: test_arrays.jb  test_classes.jb  test_inheritance.jb  test_linked_list.jb  test_mark_sweep.jb  test_ref_count.jb  test_ref_count_basic.jb  test_variables_functions.jb
tests/expected/c_output/: test_classes.c  test_inheritance.c  test_linked_list.c  test_mark_sweep.c  test_ref_count.c  test_ref_count_basic.c  test_struct_controlFlow_ptr.c  test_variables_functions.c
tests/expected/stdout/: test_classes.out  test_inheritance.out  test_linked_list.out  test_mark_sweep.out  test_ref_count.out  test_ref_count_basic.out  test_struct_controlFlow_ptr.out  test_variables_functions.out
